// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMovies Saga should call the moviesLoadingError action if the response errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`getMovies Saga should call the moviesLoadingError action if the response errors 2`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "http://www.omdbapi.com/?t=Titanic&apikey=ebcafcfe",
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;

exports[`getMovies Saga should dispatch the moviesLoaded action if it requests the data successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`getMovies Saga should dispatch the moviesLoaded action if it requests the data successfully 2`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "http://www.omdbapi.com/?t=Titanic&apikey=ebcafcfe",
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;
